--- a/app/assets/stylesheets/welcome.css.scss.erb
+++ b/app/assets/stylesheets/welcome.css.scss.erb
@@ -85,7 +85,7 @@ body {
 
 
 .header {
-height:85px;
+height:110px;
 background-color:#b9202e;
 }
 
@@ -100,7 +100,7 @@ background-color:#b9202e;
 	/*color:$darkGray; */
 	font-family:Serifa-Bold;
 	width:960px;
-	font-size:15px;
+	font-size:16px;
 	margin-right:auto;
 	 font: 100% $font-stack;
 	 
@@ -109,10 +109,13 @@ background-color:#b9202e;
 	width:960px;
 	margin-left:auto;
 	margin-right:auto;
-	height:80px;
+	
+	height:70px;
+	position:relative;
+	top:20px;
 	background-image: image-url('logo.png');
 	background-repeat:no-repeat;
-	background-position: left 00px bottom 18px;
+	background-position: left 00px top 20px;
 }
 
 .blueSubHeader{
@@ -164,6 +167,9 @@ margin-right:auto;
   margin-bottom:200px;
 }
 
+.twoLiner{
+	background-color: #FFF;
+}
 .welcome{
 	height:75px; 
 	width:930px;
@@ -192,21 +198,58 @@ margin-right:auto;
 	font-size:14px;
 
 }
-.flavorOptionsOn, .flavorOptionsOff, .disabledOn, .disabledOff, .flavorOptionsInactive{
-	cursor:pointer;
-	height:30px;
+.bubble { 
+  position: absolute; 
+  display: table;
+   cursor:pointer;
+	height:40px;
 	width:140px;
 	font-size:15px;
 	text-align:center;
-	padding-top:14px;
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
 	-ms-border-radius: 6px;
 	-o-border-radius: 6px;
 	border-radius: 6px;
-	position:absolute;
-		-webkit-font-smoothing: antialiased;
+    -webkit-font-smoothing: antialiased; 
+}
 
+.bubble p {
+  display: table-cell; 
+  vertical-align: middle; 
+  text-align: center; 
+}
+.flavorOptionsOn, .flavorOptionsOff, .disabledOn, .disabledOff, .flavorOptionsInactive{
+	  position: absolute; 
+  display: table;
+   cursor:pointer;
+	height:40px;
+	width:140px;
+	font-size:15px;
+	text-align:center;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	-ms-border-radius: 6px;
+	-o-border-radius: 6px;
+	border-radius: 6px;
+    -webkit-font-smoothing: antialiased; 
+}
+
+
+
+.flavorOptionsOn p{
+	  display: table-cell; 
+  vertical-align: middle; 
+  text-align: center; 
+  position:relative;
+ top:3px;
+}
+.flavorOptionsOff p{
+	  display: table-cell; 
+  vertical-align: middle; 
+  text-align: center; 
+  position:relative;
+ top:3px;
 }
 .disabledOn{
 	background-color:$blue;
@@ -221,6 +264,28 @@ margin-right:auto;
 	cursor:auto;
 	opacity:.5;
 }
+
+.disabledOn p{
+	  display: table-cell; 
+  vertical-align: middle; 
+  text-align: center; 
+  position:relative;
+   top:3px;
+}
+.disabledOff p{
+	  display: table-cell; 
+  vertical-align: middle; 
+  text-align: center; position:relative;
+   top:3px;
+}
+.flavorOptionsInactive p{
+	  display: table-cell; 
+  vertical-align: middle; 
+  text-align: center;
+  position:relative; 
+   top:3px;
+}
+
 
 .flavorOptionsOn
 {
@@ -245,6 +310,8 @@ color:#FFF;
 	cursor:auto;
 	background-color:$mediumGray;
 }
+
+
 
 .completionModal{
 	position:relative; 
@@ -315,17 +382,9 @@ input {
 }
 
 
-table, tr
-{
-width:920px;
-position:relative;
-}
 
-td
-{
-width:131px;
 
-}
+
 
 
 
